--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "parsec"
 path = "src/bin/main.rs"
 
 [dependencies]
-parsec-interface = "0.27.0"
+parsec-interface = {git = "https://github.com/ionut-arm/parsec-interface-rs.git", branch = "attested-tls"}
 rand = { version = "0.8.3", features = ["small_rng"], optional = true }
 base64 = "0.13.0"
 uuid = "0.8.2"
@@ -29,7 +29,8 @@ log = { version = "0.4.14", features = ["serde"] }
 cryptoki = { version = "0.3.0", optional = true, features = ["psa-crypto-conversions"] }
 picky-asn1-der = { version = "0.2.4", optional = true }
 picky-asn1 = { version = "0.3.0", optional = true }
-tss-esapi = { version = "7.1.0", optional = true }
+
+tss-esapi = { path = "../rust-tss-esapi/tss-esapi", optional = true }
 bincode = "1.3.1"
 structopt = "0.3.21"
 derivative = "2.2.0"
