--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ cryptoki = { version = "0.3.0", optional = true, features = ["psa-crypto-convers
 picky-asn1-der = { version = "0.2.4", optional = true }
 picky-asn1 = { version = "0.3.0", optional = true }
 
-tss-esapi = { path = "../rust-tss-esapi/tss-esapi", optional = true }
+tss-esapi = {git = "https://github.com/ionut-arm/rust-tss-esapi.git", branch = "attested-tls", optional = true}
 bincode = "1.3.1"
 structopt = "0.3.21"
 derivative = "2.2.0"
@@ -47,6 +47,7 @@ spiffe = { version = "0.2.1", optional = true }
 prost = { version = "0.8.0", optional = true }
 rusqlite = { version = "0.26.3", features = ["bundled"] }
 num-traits = "0.2.14"
+num-derive = "0.3.2"
 
 [dev-dependencies]
 rand = { version = "0.8.3", features = ["small_rng"] }
